# streamblocks-sdf3

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt  basic_types.h
base/exception/: CMakeLists.txt  exception.h
base/fraction/: CMakeLists.txt  fraction.h
base/fsm/: CMakeLists.txt  fsm.h
base/log/: CMakeLists.txt
base/lookup/: CMakeLists.txt  clookup.h
base/math/: CMakeLists.txt  cmath.h
base/matrix/: CMakeLists.txt
base/maxplus/: CMakeLists.txt
base/random/: CMakeLists.txt  random.h
base/sequence/: CMakeLists.txt
base/shell/: CMakeLists.txt  dirs.cc  dirs.h  shellnix.cc
base/sort/: CMakeLists.txt  sort.h
base/string/: CMakeLists.txt
base/tempfile/: CMakeLists.txt
base/time/: CMakeLists.txt
base/xml/: CMakeLists.txt  xml.cc  xml.h
sdf/: CMakeLists.txt
sdf/analysis/: CMakeLists.txt
sdf/analysis/buffersizing/: CMakeLists.txt  bounded_buffer.cc  buffer.cc  buffer.h
sdf/analysis/dependency_graph/: CMakeLists.txt
sdf/analysis/latency/: CMakeLists.txt
sdf/analysis/maxplus/: CMakeLists.txt  mpexplore.h  mpstorage.h
sdf/analysis/mcm/: CMakeLists.txt  mcm.cc  mcmhoward.cc
sdf/analysis/throughput/: CMakeLists.txt  deadlock.cc  deadlock.h
sdf/analysis/token_communication/: CMakeLists.txt
sdf/base/: CMakeLists.txt
sdf/base/algo/: CMakeLists.txt  acyclic.cc  acyclic.h  components.cc  components.h  connected.cc  connected.h  cycle.cc  cycle.h  dfs.cc  dfs.h  graph.cc  graph.h  repetition_vector.cc  repetition_vector.h
sdf/base/hsdf/: CMakeLists.txt  check.cc  check.h
sdf/base/timed/: CMakeLists.txt  graph.cc  graph.h
sdf/base/untimed/: CMakeLists.txt  actor.h  channel.cc  channel.h  graph.cc  graph.h  port.h
sdf/examples/sdf3generate-sdf/acyclic/: sdf3.opt
sdf/examples/sdf3generate-sdf/cyclic/: sdf3.opt
sdf/generate/: CMakeLists.txt  generate.cc
sdf/output/: CMakeLists.txt
sdf/output/buffer_throughput/: CMakeLists.txt
sdf/output/dot/: CMakeLists.txt  dot.cc  dot.h
sdf/output/hapi/: CMakeLists.txt  hapi.cc
sdf/output/html/: CMakeLists.txt  html.cc  html.h
sdf/output/schedule/: CMakeLists.txt  schedule.cc
sdf/output/xml/: CMakeLists.txt  xml.cc  xml.h
sdf/resource_allocation/: CMakeLists.txt
sdf/resource_allocation/binding_aware_sdfg/: CMakeLists.txt  binding_aware_sdfg.cc
sdf/resource_allocation/flow/: CMakeLists.txt  flow.cc
sdf/resource_allocation/mpsoc_arch/: CMakeLists.txt  xml.cc  xml.h
sdf/resource_allocation/noc_allocation/: CMakeLists.txt
sdf/resource_allocation/noc_allocation/mapping/: CMakeLists.txt
sdf/resource_allocation/noc_allocation/problem/: CMakeLists.txt  route.h
sdf/resource_allocation/noc_allocation/scheduler/: CMakeLists.txt
sdf/resource_allocation/scheduling/: CMakeLists.txt  static_order_schedule.cc  static_order_schedule.h
sdf/resource_allocation/tile_allocation/: CMakeLists.txt
sdf/testbench/: mp3decoder_block_parallelism.xml
sdf/tools/: CMakeLists.txt
sdf/tools/sdf3analysis/: CMakeLists.txt  sdf3analysis.cc
sdf/tools/sdf3arch/: CMakeLists.txt  sdf3arch.cc
sdf/tools/sdf3cost/: CMakeLists.txt  sdf3cost.cc
sdf/tools/sdf3ctg/: CMakeLists.txt  sdf3ctg.cc
sdf/tools/sdf3flow/: CMakeLists.txt
sdf/tools/sdf3gast/: CMakeLists.txt  sdf3gast.cc
sdf/tools/sdf3generate/: CMakeLists.txt  sdf3generate.cc
sdf/tools/sdf3print/: CMakeLists.txt  sdf3print.cc
sdf/tools/sdf3transform/: CMakeLists.txt
sdf/transform/: CMakeLists.txt
sdf/transform/hsdf/: CMakeLists.txt  hsdf.cc  hsdf.h  unfold.cc  unfold.h
sdf/transform/misc/: CMakeLists.txt
sdf/transform/model/: CMakeLists.txt  autoconc.cc  autoconc.h
sdf/transform/to_apg/: CMakeLists.txt  apg.h
